[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mlxtend"
version = "0.0.1"
description = "mlxtend is a machine learning utility library for feature engineering, model validation, reporting, and MLflow logging."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["machine learning", "feature engineering", "time series", "mlflow", "data validation", "reporting"]
authors = [
    {name = "Ahmed Alghali", email = "Ahmed@OffSecHQ.com"}
]

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "lightgbm",
    "tqdm",
    "scipy",
    "matplotlib",
    "seaborn",
    "mlflow"
]

classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/a7med7x7/flint/"

[tool.setuptools.packages.find]
include = ["mlxtend", "mlxtend.*"]
exclude = ["tests", "flintvenv", "experments"]